edicion acerca de carrera

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <div class="header__textos">
                     <h1 class="header__titulo-primary">Adrián González</h1>
-                    <h2 class="header__titulo-secondary">Estudiante y Diseñador web</h2>
+                    <h2 class="header__titulo-secondary">Ing. Industrial y Desarrollador Web</h2>
                 </div>
             </div>
              
@@ -54,7 +54,8 @@
 
         <div class="acerca__tarjetas">
             <div class="acerca__tarjeta-1">
-                <p class="parrafo"> <span>E</span>studiante de los últimos semestres de Ingeniería Industrial y Técnico Superior en Informática. Pasión por el aprendizaje autónomo; fanático de la creatividad y el diseño, apasionado por la fotografía, y empezando una carrera en el diseño web. Mis principales metas en este campo es el mejoramiento continuo de las formas de implementar las tecnologías disponibles para la creación de páginas web, que se vean excelente tanto en pantallas grandes como en dispositivos móviles, con una filosofía <i>Mobile First</i>, a través del diseño <i>Responsive</i>.</p>
+                <p class="parrafo"> <span>I</span>ngeniero Industrial recien egresado y entusiasta por el desarrollo web. Pasión por el aprendizaje autónomo y autodidáctico; fanático de la creatividad y el diseño, apasionado por la fotografía, y buscando un espacio dentro del desarrollo web. Mis principales metas en este campo es la creación de páginas y aplicaciones web que se vean excelente tanto en pantallas grandes como en dispositivos móviles, con una filosofía <i>Mobile First</i>, a través del diseño <i>Responsive</i>.
+                Y como complemento de mi profesión como Ingeniero Industrial, tengo base suficiente y conocimiento de sofware para el Análisis de Datos (Python, Tableau, Excel, etc)</p>
             </div>
 
             <div class="acerca__tarjeta-2" id="contacto">
