practicas add img

--- a/practicas/1/index.html
+++ b/practicas/1/index.html
@@ -17,62 +17,110 @@
     <section>
         <div class="container-fluid">
             <div class="row no-gutters">
+                <!-- first row -->
                 <div class="col-6">
-                    <div class="content uno text-center">
-                        content
+                    <div class="content normal-row uno text-center">
+                        <img src="portfolio/003.jpg" alt="Primer" class="img-fluid">
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="content dos text-center">
-                        content
+                    <div class="content normal-row dos text-center">
+                        <img src="portfolio/004.jpg" alt="Primer" class="img-fluid">
                     </div>
                 </div>
+
+                <!-- second row -->
                 <div class="col-6">
-                    <div class="content uno text-center">
-                        content
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="content dos text-center">
-                        content
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="content uno text-center">
-                        content
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="content dos text-center">
-                        content
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="content uno text-center">
-                        <h3>content</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                    </div>
-                </div>
-                <!--final part-->
-                <div class="col-6">
-                    <div class="content uno text-center">
-                        content
-                    </div>
-                    <div class="content uno text-center">
-                        content
+                    <div class="content full-3 uno text-center">
+                        <img src="portfolio/001.jpg" alt="Primer" class="img-fluid">
                     </div>
                 </div>
 
                 <div class="col-6">
-                    <div class="content-fluid dos  text-center">
+                    <div class="full-2 dos  text-center">
                         <div class="row">
                             <div class="col nested">
-                                content
+                                <img src="portfolio/002.jpg" alt="Primer" class="img-fluid">
                             </div>
                             <!--<div class="col nested">
                                 content
                             </div>-->
                         </div>
+                    </div>
+                    <div class="content normal-row dos text-center">
+                        <img src="portfolio/006.jpg" alt="Primer" class="img-fluid">
+                    </div>
+                </div>
+
+                <!-- Thrith row -->
+                <div class="col-6">
+                    <div class="content normal-row uno text-center">
+                        <img src="portfolio/003.jpg" alt="Primer" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="content normal-row dos text-center">
+                            <img src="portfolio/005.jpg" alt="Primer" class="img-fluid">
+                    </div>
+                </div>
+
+                <!-- fourth row -->
+                <div class="col-12">
+                    <div class="content completo uno text-center">
+                        <img src="portfolio/007.jpg" alt="Primer" class="img-fluid">
+                    </div>
+                </div>
+
+                <!--five row -->
+                <div class="col-6">
+                    <div class="content normal-row uno text-center">
+                            <img src="portfolio/006.jpg" alt="Primer" class="img-fluid">
+                    </div>
+                    <div class="content normal-row uno text-center">
+                            <img src="portfolio/004.jpg" alt="Primer" class="img-fluid">
+                    </div>
+                </div>
+
+                <div class="col-6">
+                    <div class="full-2 dos  text-center">
+                        <div class="row">
+                            <div class="col nested">
+                                <img src="portfolio/002.jpg" alt="Primer" class="img-fluid">
+                            </div>
+                            <!--<div class="col nested">
+                                content
+                            </div>-->
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Six row -->
+                <div class="col-12">
+                        <div class="content completo uno text-center">
+                            <img src="portfolio/008.jpg" alt="Primer" class="img-fluid">
+                        </div>
+                    </div>
+                
+                <!-- Seventh row -->
+                <div class="col-6">
+                    <div class="content full-3 uno text-center">
+                        <img src="portfolio/001.jpg" alt="Primer" class="img-fluid">
+                    </div>
+                </div>
+
+                <div class="col-6">
+                    <div class="full-2 dos  text-center">
+                        <div class="row">
+                            <div class="col nested">
+                                <img src="portfolio/002.jpg" alt="Primer" class="img-fluid">
+                            </div>
+                            <!--<div class="col nested">
+                                content
+                            </div>-->
+                        </div>
+                    </div>
+                    <div class="content normal-row dos text-center">
+                        <img src="portfolio/004.jpg" alt="Primer" class="img-fluid">
                     </div>
                 </div>
 
