--- a/u/edgeledger/index.html
+++ b/u/edgeledger/index.html
@@ -123,6 +123,54 @@
         </div>
     </section>
 
+    <!-- Section: Contact -->
+    <section id="contact">
+
+        <div class="contact-form bg-primary p-2">
+            <h2 class="m-heading">Contact Us</h2>
+            <p>Please use the form below to contact us</p>
+            <form>
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" placeholder="Enter Name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="Enter email">
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone Number</label>
+                    <input type="text" name="phone" id="phone" placeholder="Enter Phone">
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea type="text" name="message" id="message" placeholder="Enter Message"></textarea>
+                </div>
+                <input type="summit" value="Send" class="btn btn-dark">
+            </form>
+        </div>
+
+        <div class="map"></div>
+
+    </section>
+
+    <!-- Footer -->
+    <footer id="main-footer" class="bg-dark text-center py-1">
+        <div class="containers">
+            <p>Copyright &copy; 2019, EdgeLedger. Made by Adrianrgs from the course of Brad Traversy</p>
+        </div>
+    </footer>
+
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWJOdAmNmZEvLvcJmGvpS66HOaCrSAyEI&callback=initMap"
+        async defer></script>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
+
 </body>
 
 </html>
+
+<!--AIzaSyBWJOdAmNmZEvLvcJmGvpS66HOaCrSAyEI-->
