--- a/u/practicas/2/index.html
+++ b/u/practicas/2/index.html
@@ -27,6 +27,7 @@
                 <li class="navigation__item"><a href="#" class="navigation__link">Modelo de Negocio</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Productos</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Carrito</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Quienes Somos</a></li>
             </ul>
         </nav>
     </div>
@@ -49,7 +50,7 @@
 
         <div class="item item1">
             <div class="item nested">Casco de Dulces</div>
-            <div class="item nested">$125.000 (+)</div>
+            <div class="item nested">$12.000</div>
         </div>
 
         <div class="item item2">
@@ -62,7 +63,7 @@
 
         <div class="item item1">
             <div class="item nested">Alfajores</div>
-            <div class="item nested">$125.000 (+)</div>
+            <div class="item nested">$1.000</div>
         </div>
 
         <div class="item item2">
@@ -75,7 +76,7 @@
 
         <div class="item item1">
             <div class="item nested">Leche mila</div>
-            <div class="item nested">$125.000 (+)</div>
+            <div class="item nested">$35.000</div>
         </div>
 
         <div class="item item2">
@@ -88,7 +89,7 @@
 
         <div class="item item1">
             <div class="item nested">Tortas</div>
-            <div class="item nested">$125.000 (+)</div>
+            <div class="item nested">$10.000</div>
         </div>
 
         <div class="item item2">
@@ -101,7 +102,7 @@
 
         <div class="item item1">
             <div class="item nested">Leche mila</div>
-            <div class="item nested">$125.000 (+)</div>
+            <div class="item nested">$125.000</div>
         </div>
 
         <div class="item item2">
