--- a/u/practicas/2/index.html
+++ b/u/practicas/2/index.html
@@ -115,7 +115,7 @@
 
         <div class="item item1">
             <div class="item nested">Leche mila</div>
-            <div class="item nested">$125.000 (+)</div>
+            <div class="item nested">$125.000</div>
         </div>
 
         <div class="item item2">
@@ -128,7 +128,7 @@
 
         <div class="item item1">
             <div class="item nested">Leche mila</div>
-            <div class="item nested">$125.000 (+)</div>
+            <div class="item nested">$125.000</div>
         </div>
 
         <div class="item item2">
