--- a/u/solo/index.html
+++ b/u/solo/index.html
@@ -981,6 +981,145 @@
     </section>
     <!--  Ends -->
 
+    <!-- Section Testimonials -->
+    <section id="testimonials">
+
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-md-4">
+
+                    <div class="vertical-heading">
+                        <h5>Who We Are</h5>
+                        <h2>What Our <br> <strong>Customers</strong> Say</h2>
+                    </div>
+
+                </div>
+
+                <div class="col-md-8">
+
+                    <div id="testimonial-slider" class="owl-carousel owl-theme">
+
+                        <!-- 1 Testimonial -->
+                        <div class="testimonial">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3>Quality Support</h3>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="stars text-right">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ad itaque odit
+                                nobis nemo rem, quos harum dolor culpa sunt error voluptates eos labore quam inventore
+                                quas sapiente exercitationem incidunt.</p>
+
+                            <div class="author">
+                                <div class="row">
+                                    <div class="col-md-2">
+                                        <img src="img/testimonial/client-1.jpg" alt="client"
+                                            class="img-fluid rounded-circle">
+                                    </div>
+                                    <div class="col-md-10">
+                                        <div class="author-name-des">
+                                            <p>Joq Martin</p>
+                                            <p>Senior Developer</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- 2 Testimonial -->
+                        <div class="testimonial">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3>Quality Support</h3>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="stars text-right">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ad itaque odit
+                                nobis nemo rem, quos harum dolor culpa sunt error voluptates eos labore quam inventore
+                                quas sapiente exercitationem incidunt.</p>
+
+                            <div class="author">
+                                <div class="row">
+                                    <div class="col-md-2">
+                                        <img src="img/testimonial/client-2.jpg" alt="client"
+                                            class="img-fluid rounded-circle">
+                                    </div>
+                                    <div class="col-md-10">
+                                        <div class="author-name-des">
+                                            <p>Joq Martin</p>
+                                            <p>Senior Developer</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- 3 Testimonial -->
+                        <div class="testimonial">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3>Quality Support</h3>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="stars text-right">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ad itaque odit
+                                nobis nemo rem, quos harum dolor culpa sunt error voluptates eos labore quam inventore
+                                quas sapiente exercitationem incidunt.</p>
+
+                            <div class="author">
+                                <div class="row">
+                                    <div class="col-md-2">
+                                        <img src="img/testimonial/client-3.jpg" alt="client"
+                                            class="img-fluid rounded-circle">
+                                    </div>
+                                    <div class="col-md-10">
+                                        <div class="author-name-des">
+                                            <p>Joq Martin</p>
+                                            <p>Senior Developer</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
 
 
 
