--- a/u/trillo/index.html
+++ b/u/trillo/index.html
@@ -23,7 +23,7 @@
         <header class="header">
 
             <div class="logo">
-                <img src="../img/imagen2.png" alt="trillo logo" class="logo-img">
+                <img src="img/Imagen2.png" alt="milo" class="logo-img">
                 <h3>Dulces Milo</h3>
             </div>
 
