finished desktop trillo

--- a/u/trillo/index.html
+++ b/u/trillo/index.html
@@ -24,8 +24,7 @@
         <header class="header">
 
             <div class="logo">
-                <img src="img/Imagen2.png" alt="milo" class="logo-img">
-                <h3>Dulces Milo</h3>
+                <img src="img/logo.png" alt="milo" class="logo-img">
             </div>
 
 
@@ -156,6 +155,91 @@
                         <div class="overview__rating-average">8.6</div>
                         <div class="overview__rating-count">428 votes</div>
                     </div>
+                </div>
+
+                <!-- Details -->
+                <div class="detail">
+                    <div class="description">
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, adipisci. Lorem ipsum
+                            dolor sit amet consectetur adipisicing elit. Rem, nemo. Lorem ipsum dolor sit amet.
+                        </p>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, adipisci. Lorem ipsum
+                            dolor sit amet consectetur adipisicing elit.
+                        </p>
+
+                        <ul class="list">
+                            <li class="list__items">Close to the Beach</li>
+                            <li class="list__items">Breakfast included</li>
+                            <li class="list__items">Free airport shuttle</li>
+                            <li class="list__items">Free wifi in all rooms</li>
+                            <li class="list__items">Air conditioning and heationg</li>
+                            <li class="list__items">Pets allowed</li>
+                            <li class="list__items">We speak Spanish and English</li>
+                            <li class="list__items">Perfect for families</li>
+                        </ul>
+
+                        <div class="recommend">
+                            <div class="recommend__count">
+                                Lucy and 3 other friends recommend this hotel
+                            </div>
+                            <div class="recommend__friends">
+                                <img src="img/user-3.jpg" alt="user 1" class="recommend__photo">
+                                <img src="img/user-4.jpg" alt="user 2" class="recommend__photo">
+                                <img src="img/user-5.jpg" alt="user 3" class="recommend__photo">
+                                <img src="img/user-6.jpg" alt="user 4" class="recommend__photo">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="user-reviews">
+                        <figure class="review">
+                            <blockquote class="review__text">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum cumque a itaque
+                                molestiae exercitationem
+                            </blockquote>
+                            <figcaption class="review__user">
+                                <img src="img/user-1.jpg" alt="user 1" class="review__photo">
+                                <div class="review__user-box">
+                                    <p class="review__user-name">Nick Smith</p>
+                                    <p class="review__user-date">Feb 23rd, 2017</p>
+                                </div>
+                                <div class="review__rating">7.8</div>
+                            </figcaption>
+                        </figure>
+
+                        <figure class="review">
+                            <blockquote class="review__text">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum cumque a
+                            </blockquote>
+                            <figcaption class="review__user">
+                                <img src="img/user-2.jpg" alt="user 1" class="review__photo">
+                                <div class="review__user-box">
+                                    <p class="review__user-name">Mary Thomas</p>
+                                    <p class="review__user-date">Sep 13th, 2017</p>
+                                </div>
+                                <div class="review__rating">8.9</div>
+                            </figcaption>
+                        </figure>
+
+                        <button class="btn-inline">Show all <span>&rarr;</span></button>
+                    </div>
+                </div>
+
+                <!-- Call to action -->
+                <div class="cta">
+                    <h2 class="cta__book-now">
+                        Good news! We have 4 free rooms for your selected dates
+                    </h2>
+                    <button class="btn">
+                        <span class="btn__visible">
+                            Book Now
+                        </span>
+                        <span class="btn__invisible">
+                            Only 4 rooms left
+                        </span>
+                    </button>
                 </div>
             </main>
         </div>
