--- a/u/productos/index.html
+++ b/u/productos/index.html
@@ -71,6 +71,48 @@
                 </div>
             </div>
 
+            <div class="producto">
+
+                <div class="producto-foto">
+                    <img src="5.jpg" alt="foto 1" class="foto">
+                    <span>Guayaba</span>
+                </div>
+
+                <div class="producto-descripcion">
+                    <p>Lorem ipsum dolor sit</p>
+
+                    <button>Ver mas</button>
+                </div>
+            </div>
+
+            <div class="producto">
+
+                <div class="producto-foto">
+                    <img src="5.jpg" alt="foto 1" class="foto">
+                    <span>Guayaba</span>
+                </div>
+
+                <div class="producto-descripcion">
+                    <p>Lorem ipsum dolor sit</p>
+
+                    <button>Ver mas</button>
+                </div>
+            </div>
+
+            <div class="producto">
+
+                <div class="producto-foto">
+                    <img src="5.jpg" alt="foto 1" class="foto">
+                    <span>Guayaba</span>
+                </div>
+
+                <div class="producto-descripcion">
+                    <p>Lorem ipsum dolor sit</p>
+
+                    <button>Ver mas</button>
+                </div>
+            </div>
+
 
 
         </div>
