--- a/u/productos/index.html
+++ b/u/productos/index.html
@@ -11,6 +11,16 @@
 
 <body>
 
+    <section>
+        <div class="contenedor">
+            <div class="header">
+                <h2>Dulces</h2>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Productos -->
     <div class="contenedor">
 
         <div class="contenedor-productos">
